# bevy_xpbd_interp

./: Cargo.toml  README.md  publish.sh
crates/bevy_xpbd_2d_interp/: Cargo.toml
crates/bevy_xpbd_2d_interp/examples/: box_2d.rs
crates/bevy_xpbd_3d_interp/: Cargo.toml
crates/bevy_xpbd_3d_interp/examples/: box_3d.rs
examples/: box.rs  moving_box.rs
src/: lib.rs  plugin.rs  prelude.rs
