[package]
name = "bevy_xpbd_3d_interp"
version = "0.1.0"
edition = "2021"
description = "A simple library for interpolation of bevy_xpbd rigidbodies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rubengrim/bevy_xpbd_interp"
readme = "README.md"
keywords = ["gamedev", "physics", "interpolation", "xpbd", "bevy"]
categories = ["game-development", "science", "simulation"]

[features]
default = ["3d"]
3d = []

[lib]
name = "bevy_xpbd_3d_interp"
path = "../../src/lib.rs"
required-features = ["3d"]

[dependencies]
bevy = "0.12"
bevy_xpbd_3d = "0.3.2"
